# VAMPIRE

./: .gitignore  Dockerfile  NEWS.md  README.md  agent.md  cmd.sh  estimateParameters.py  pyproject.toml  readthedocs.yml  stringDecompose.py  vampire.def  vampire.py  vampire_full.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  docker.yml  docs.yml  lint.yml  test-anno.yml  test.yml
docs/: =0.1.0  requirements.txt
docs/source/: conf.py  index.md  installation.md  news.md  references.md
docs/source/api/: index.md
docs/source/api/anno/pl/: index.md
docs/source/api/anno/pp/: index.md
docs/source/api/anno/tl/: index.md
docs/source/api/datasets/: index.md
docs/source/api/pl/: index.md
docs/source/api/pp/: index.md  read_bed.md
docs/source/cli/: anno.md  evaluate.md  generator.md  identity.md  index.md  integrate.md  refine.md  scan.md
docs/source/contributing/: contributors.md  index.md
docs/source/release-notes/: index.md
docs/source/tutorials/: index.md
docs/source/tutorials/analysis/: index.md
docs/source/tutorials/annotation/: index.md
docs/source/tutorials/basic/: basic_anno_turtorial.ipynb  centromere.ipynb  index.md  wdr7_analysis.ipynb
scripts/: SG_aln_plot.R  TRgenerator.py  ed_matrix.py  generate_refMotif.py  get_visualization_data.py  invert_sequence.py  plot_annotation.R  plot_seqLOGO.py  revise_annotation.py  test.tsv  test_revise_annotation.sh
src/vampire/: __init__.py  _anno.py  _generator.py  _integrate.py  _scan.py  _utils.py  anno-backup0401.py  anno.py  generator.py  integrate.py  main.py  scan-backup0317.py  scan-backup0323.py  scan-backup0331-hirschberg.py  scan-backup0331.py  scan.py
src/vampire.egg-info/: PKG-INFO  SOURCES.txt
src/vampire/_report_utils/: __init__.py  _make_report.py  _make_stats.py  _motif_processing.py  _plot.py  _read.py  _stats_basic.py  _stats_cigar.py  _stats_seq.py  _table.py  calculate_window_stats.py  create_largest_trs_table_by_copy_number.py  fig_to_html.py  get_copy_number.py  make_report.py  make_stats.py  ops_to_cigar.py  plot_enriched_motifs_by_copy_number.py  plot_enriched_motifs_by_tr_number.py  plot_entropy_distribution.py  plot_length_period_distribution.py  plot_smoothness_score_distribution.py  plot_tr_distribution.py
src/vampire/anno/pl/: __init__.py  _heatmap.py  _logo.py  _motif_msa.py  _pca.py  _plot.py  _setting.py  _sizing.py  _violin.py
src/vampire/anno/pp/: __init__.py  _markdup.py  _read.py
src/vampire/anno/tl/: __init__.py  _align.py  _cluster.py  _haplotype.py  _pca.py
src/vampire/datasets/: __init__.py  _datasets.py
src/vampire/datasets/data/: ancestry.csv  wdr7_hprc.h5ad
src/vampire/generator_utils/: multiMotifTR.py  singleMotifTR.py
src/vampire/pl/: __init__.py  _plot.py
src/vampire/plot_utils/: __init__.py  create_largest_trs_table_by_copy_number.py  fig_to_html.py  plot_enriched_motifs_by_copy_number.py  plot_enriched_motifs_by_tr_number.py  plot_entropy_distribution.py  plot_length_period_distribution.py  plot_smoothness_score_distribution.py  plot_tr_distribution.py
src/vampire/pp/: __init__.py  _read.py
src/vampire/resources/: README_addChart.md  anno_web_summary_template.html  example_usage_addchart.py  html_chart_helper.py  scan_web_summary_template.html
src/vampire/stats_utils/: __init__.py  calculate_alignment_metrics.py  make_stats.py
tests/: 001-anno_STR.annotation.tsv  001-anno_STR.concise.tsv  001-anno_STR.dist.tsv  001-anno_STR.h5ad  001-anno_STR.motif.tsv  001-anno_STR.setting.json  001-anno_STR.web_summary.html  002-generator_reference.anno.tsv  002-generator_reference.anno_woMut.tsv  002-generator_reference.fa  003-mkref_reference.fa  004-evaluate_normalized_merged_distance.tsv  004-evaluate_normalized_separate_distance.tsv  004-evaluate_raw_merged_distance.tsv  004-evaluate_raw_separate_distance.tsv  005-anno_STR.revised.annotation.tsv  005-anno_STR.revised.concise.tsv  005-anno_STR.revised.dist.tsv  005-anno_STR.revised.motif.tsv  005-refine_action.tsv  006-anno_STR_annotation_count.tsv  006-anno_STR_motif_count.tsv  007-anno_STR_5bp_TR_1.bed  007-anno_STR_5bp_TR_2.bed  test_import.py
tests/anno/: conftest.py  test_anno_cli.py  test_anno_utils.py
tests/anno/data/: 001-1bp_polyA.fa  002-5bp_perfect.fa  003-5bp_snv_gap_rc.fa  004-5bp_partial.fa  005-18bp_partial.fa  5bp_perfect.motif.fa
tests/anno/expected/: 003-5bp_snv_gap_rc.annotation.tsv  003-5bp_snv_gap_rc.concise.tsv  003-5bp_snv_gap_rc.distance.tsv  003-5bp_snv_gap_rc.h5ad  003-5bp_snv_gap_rc.motif.tsv  003-5bp_snv_gap_rc.web_summary.html
