[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vampire-tr"
version = "0.3.0"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["tandem repeat", "kmer", "de bruijn graph"]
description = "An integrated tool for annotating the motif variation and complex patterns in tandem repeats."
authors = [
    {name = "Zikun Yang", email = "ericyangzk@gmail.com"},
    {name = "Shilong Zhang", email = "shilong.zhang.cn@gmail.com"},
    {name = "Yafei Mao", email = "yafmao@gmail.com"}
]
maintainers = [
  {name = "Zikun Yang", email = "ericyangzk@gmail.com"}
]
dependencies = [
    "numpy",
    "pandas",
    "edlib",
    "tqdm",
    "matplotlib",
    "seaborn",
    "scipy",
    "pybktree",
    "Levenshtein",
    "biopython",
    "rich",
    "sourmash",
    "networkx",
    "scikit-learn",
    "logomaker",
    "polars",
    "pysam",
    "pyarrow",
    "anndata",
    "plotly",
    "numba",
]
requires-python = ">=3.10,<3.13"

[project.optional-dependencies]
docs = [
    "sphinx>=5.0",
    "sphinx-design",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.0",
    "myst_parser",
    "sphinx-book-theme==1.1.4",
    "scanpydoc==0.17.3"
]

[project.urls]
Homepage = "https://zikun-yang.github.io/VAMPIRE_Cookbook/"

[project.scripts]
vampire = "vampire.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"vampire.resources" = ["refMotif.fa",
		       "scan_web_summary_template.html"]

